dashboard-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: dashboard-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - host: socialo.pics
#       http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: webapp-service
#                 port:
#                   number: 8081

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress
#   annotations:
#     kubernetes.io/ingress.class: gce
# spec:
#   rules:
#     - host: socialo.pics
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: webapp-service
#                 port:
#                   number: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webapp-service
                port:
                  number: 8081
