nginx-ingress-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
        - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
          imagePullPolicy: IfNotPresent
          name: web
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
  namespace: default
spec:
  selector:
    matchLabels:
      run: web2
  template:
    metadata:
      labels:
        run: web2
    spec:
      containers:
        - image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
          imagePullPolicy: IfNotPresent
          name: web2
          ports:
            - containerPort: 8080
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: web
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: web2
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: web2
  type: NodePort

#gcp
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: basic-ingress
# spec:
#   defaultBackend:
#     service:
#       name: web
#       port:
#         number: 8080
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: web2
#                 port:
#                   number: 8080
#           - path: /student
#             pathType: Exact
#             backend:
#               service:
#                 name: webapp-service
#                 port:
#                   number: 8080

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: basic-ingress
# spec:
#   defaultBackend:
#     service:
#       name: web
#       port:
#         number: 8080
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: web2
#                 port:
#                   number: 8080
#           - path: /student
#             pathType: Exact
#             backend:
#               service:
#                 name: webapp-service
#                 port:
#                   number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: alb
  tls:
    - hosts:
      - socialo.pics
      secretName: hello-world-ca-tsl
  defaultBackend:
    service:
      name: web
      port:
        number: 8080
  rules:
    - host: socialo.pics
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: web2
                port:
                  number: 8080
          - path: /student
            pathType: Exact
            backend:
              service:
                name: webapp-service
                port:
                  number: 8080
